--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
     <div class="button">
         <button id="name-change">Change name</button>
     </div>
+    <div class="color-buttons">
+        <button id="pink">Pink</button>
+        <button id="black">Black</button>
+        <button id="blue"> Blue</button>
+    </div>
 </body>
 </html>
