--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="color-buttons">
         <button id="pink">Pink</button>
-        <button id="black">Black</button>
+        <button id="purple">Purple</button>
         <button id="blue"> Blue</button>
     </div>
 </body>
