--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Name Tag 2.0</title>
     <script type="module" src="app.js"></script> 
 </head>
 <body>
@@ -25,7 +25,7 @@
     </div>
     <div class="color-buttons">
         <button id="pink">Pink</button>
-        <button id="purple">Purple</button>
+        <button id="gray">Gray</button>
         <button id="blue"> Blue</button>
     </div>
 </body>
